// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`has a bottom word 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#DCDCDC",
      "flexGrow": 0,
      "margin": "0px 10px 10px 0px",
      "minWidth": "115px",
      "padding": "7px",
      "transition": "0.1s",
    }
  }
>
  <div
    style={
      Object {
        "backgroundColor": "#DCDCDC",
        "display": "flex",
        "flexDirection": "column",
        "height": "100%",
      }
    }
  >
    <div
      style={
        Object {
          "border": "3px dashed #ffffff",
          "boxSizing": "border-box",
          "flexGrow": 1,
          "marginBottom": "7px",
          "minHeight": "45px",
          "transition": "0.1s",
          "width": "100%",
        }
      }
    >
      <div
        style={
          Object {
            "display": "flex",
            "left": 0,
            "opacity": 1,
            "position": "relative",
            "top": 0,
            "transition": "0.1s",
          }
        }
      />
    </div>
    <div
      style={
        Object {
          "border": "3px dashed transparent",
          "boxSizing": "border-box",
          "flexGrow": 1,
          "minHeight": "45px",
          "transition": "0.1s",
          "width": "100%",
        }
      }
    >
      <div
        style={
          Object {
            "display": "flex",
            "left": 0,
            "opacity": 1,
            "position": "relative",
            "top": 0,
            "transition": "0.1s",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`has a top and bottom word 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#DCDCDC",
      "flexGrow": 0,
      "margin": "0px 10px 10px 0px",
      "minWidth": "115px",
      "padding": "7px",
      "transition": "0.1s",
    }
  }
>
  <div
    style={
      Object {
        "backgroundColor": "#DCDCDC",
        "display": "flex",
        "flexDirection": "column",
        "fontSize": "20px",
        "height": "100px",
        "padding": "5px",
        "width": "280px",
      }
    }
  >
    [WARNING: This Bible version does not include text for this reference.]
  </div>
</div>
`;

exports[`has a top word 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#DCDCDC",
      "flexGrow": 0,
      "margin": "0px 10px 10px 0px",
      "minWidth": "calc(115px/2)",
      "padding": "7px",
      "transition": "0.1s",
    }
  }
>
  <div
    style={
      Object {
        "backgroundColor": "#DCDCDC",
        "display": "flex",
        "flexDirection": "column",
        "height": "100%",
      }
    }
  >
    <div
      style={
        Object {
          "border": "3px dashed #ffffff",
          "boxSizing": "border-box",
          "flexGrow": 1,
          "marginBottom": "7px",
          "minHeight": "45px",
          "transition": "0.1s",
          "width": "100%",
        }
      }
    >
      <div
        style={
          Object {
            "display": "flex",
            "left": 0,
            "opacity": 1,
            "position": "relative",
            "top": 0,
            "transition": "0.1s",
          }
        }
      />
    </div>
    <div
      style={
        Object {
          "border": "3px dashed #ffffff",
          "boxSizing": "border-box",
          "flexGrow": 1,
          "minHeight": "45px",
          "transition": "0.1s",
          "width": "100%",
        }
      }
    >
      <div
        style={
          Object {
            "display": "flex",
            "left": 0,
            "opacity": 1,
            "position": "relative",
            "top": 0,
            "transition": "0.1s",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`has multiple bottom words 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#DCDCDC",
      "flexGrow": 1,
      "margin": "0px 10px 10px 0px",
      "minWidth": "115px",
      "padding": "7px",
      "transition": "0.1s",
    }
  }
>
  <div
    style={
      Object {
        "backgroundColor": "#DCDCDC",
        "display": "flex",
        "flexDirection": "column",
        "height": "100%",
      }
    }
  >
    <div
      style={
        Object {
          "border": "3px dashed #ffffff",
          "boxSizing": "border-box",
          "flexGrow": 1,
          "marginBottom": "7px",
          "minHeight": "45px",
          "transition": "0.1s",
          "width": "100%",
        }
      }
    >
      <div
        style={
          Object {
            "display": "flex",
            "left": 0,
            "opacity": 1,
            "position": "relative",
            "top": 0,
            "transition": "0.1s",
          }
        }
      />
    </div>
    <div
      style={
        Object {
          "border": "3px dashed transparent",
          "boxSizing": "border-box",
          "flexGrow": 1,
          "minHeight": "45px",
          "transition": "0.1s",
          "width": "100%",
        }
      }
    >
      <div
        style={
          Object {
            "display": "flex",
            "left": 0,
            "opacity": 1,
            "position": "relative",
            "top": 0,
            "transition": "0.1s",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`has multiple top and bottom words 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#DCDCDC",
      "flexGrow": 1,
      "margin": "0px 10px 10px 0px",
      "minWidth": "115px",
      "padding": "7px",
      "transition": "0.1s",
    }
  }
>
  <div
    style={
      Object {
        "backgroundColor": "#DCDCDC",
        "display": "flex",
        "flexDirection": "column",
        "height": "100%",
      }
    }
  >
    <div
      style={
        Object {
          "border": "3px dashed transparent",
          "boxSizing": "border-box",
          "flexGrow": 1,
          "marginBottom": "7px",
          "minHeight": "45px",
          "transition": "0.1s",
          "width": "100%",
        }
      }
    >
      <div
        style={
          Object {
            "display": "flex",
            "left": 0,
            "opacity": 1,
            "position": "relative",
            "top": 0,
            "transition": "0.1s",
          }
        }
      />
    </div>
    <div
      style={
        Object {
          "border": "3px dashed transparent",
          "boxSizing": "border-box",
          "flexGrow": 1,
          "minHeight": "45px",
          "transition": "0.1s",
          "width": "100%",
        }
      }
    >
      <div
        style={
          Object {
            "display": "flex",
            "left": 0,
            "opacity": 1,
            "position": "relative",
            "top": 0,
            "transition": "0.1s",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`has multiple top words 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#DCDCDC",
      "flexGrow": 1,
      "margin": "0px 10px 10px 0px",
      "minWidth": "115px",
      "padding": "7px",
      "transition": "0.1s",
    }
  }
>
  <div
    style={
      Object {
        "backgroundColor": "#DCDCDC",
        "display": "flex",
        "flexDirection": "column",
        "height": "100%",
      }
    }
  >
    <div
      style={
        Object {
          "border": "3px dashed transparent",
          "boxSizing": "border-box",
          "flexGrow": 1,
          "marginBottom": "7px",
          "minHeight": "45px",
          "transition": "0.1s",
          "width": "100%",
        }
      }
    >
      <div
        style={
          Object {
            "display": "flex",
            "left": 0,
            "opacity": 1,
            "position": "relative",
            "top": 0,
            "transition": "0.1s",
          }
        }
      />
    </div>
    <div
      style={
        Object {
          "border": "3px dashed #ffffff",
          "boxSizing": "border-box",
          "flexGrow": 1,
          "minHeight": "45px",
          "transition": "0.1s",
          "width": "100%",
        }
      }
    >
      <div
        style={
          Object {
            "display": "flex",
            "left": 0,
            "opacity": 1,
            "position": "relative",
            "top": 0,
            "transition": "0.1s",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`is empty 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#DCDCDC",
      "flexGrow": 0,
      "margin": "0px 10px 10px 0px",
      "minWidth": "calc(115px/2)",
      "padding": "7px",
      "transition": "0.1s",
    }
  }
>
  <div
    style={
      Object {
        "backgroundColor": "#DCDCDC",
        "display": "flex",
        "flexDirection": "column",
        "height": "100%",
      }
    }
  >
    <div
      style={
        Object {
          "border": "3px dashed #ffffff",
          "boxSizing": "border-box",
          "flexGrow": 1,
          "marginBottom": "7px",
          "minHeight": "45px",
          "transition": "0.1s",
          "width": "100%",
        }
      }
    >
      <div
        style={
          Object {
            "display": "flex",
            "left": 0,
            "opacity": 1,
            "position": "relative",
            "top": 0,
            "transition": "0.1s",
          }
        }
      />
    </div>
    <div
      style={
        Object {
          "border": "3px dashed #ffffff",
          "boxSizing": "border-box",
          "flexGrow": 1,
          "minHeight": "45px",
          "transition": "0.1s",
          "width": "100%",
        }
      }
    >
      <div
        style={
          Object {
            "display": "flex",
            "left": 0,
            "opacity": 1,
            "position": "relative",
            "top": 0,
            "transition": "0.1s",
          }
        }
      />
    </div>
  </div>
</div>
`;
